--- a/AirQualityMonitor/app/src/main/res/layout/air_quality_fragment.xml
+++ b/AirQualityMonitor/app/src/main/res/layout/air_quality_fragment.xml
@@ -10,7 +10,7 @@
         android:id="@+id/deviceName"
         android:layout_width="117dp"
         android:layout_height="68dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:text="Monitor ID"
         android:textSize="30sp"
@@ -21,7 +21,7 @@
         android:id="@+id/pm2_5Item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
         android:text="0"
         android:textAlignment="center"
         android:textSize="30sp"
@@ -32,7 +32,7 @@
         android:id="@+id/pm10_0Item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
         android:text="0"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/pm10_0text"
@@ -42,7 +42,7 @@
         android:id="@+id/pm2_5text"
         android:layout_width="120dp"
         android:layout_height="42dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:text="PM2_5"
         android:textSize="30sp"
@@ -53,22 +53,21 @@
         android:id="@+id/pm10_0text"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:text="PM10_0"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pm2_5text" />
 
-    //Make a (+)int filter
     <EditText
         android:id="@+id/editDeviceName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
         android:autofillHints=""
         android:hint="Input"
-        android:inputType="text"
+        android:inputType="number"
         android:text="0"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="@+id/deviceName"
@@ -80,9 +79,20 @@
         android:id="@+id/setDeviceName"
         android:layout_width="wrap_content"
         android:layout_height="41dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:text="@string/set_monitor_device_id_button"
         app:layout_constraintBottom_toBottomOf="@+id/editDeviceName"
         app:layout_constraintStart_toEndOf="@+id/editDeviceName"
         app:layout_constraintTop_toTopOf="@+id/deviceName" />
+
+    <ImageView
+        android:id="@+id/setDeviceNameInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/setDeviceName"
+        app:layout_constraintStart_toEndOf="@+id/setDeviceName"
+        app:layout_constraintTop_toTopOf="@+id/setDeviceName"
+        app:srcCompat="@android:drawable/ic_menu_info_details"
+        android:contentDescription="TODO" />
 </androidx.constraintlayout.widget.ConstraintLayout>
