--- a/app/src/main/res/menu/navdrawer_menu.xml
+++ b/app/src/main/res/menu/navdrawer_menu.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/homeFragment"
+        android:icon="?attr/actionModePasteDrawable"
+        android:title="@string/home" />
+    <item
+        android:id="@+id/questionaireFragment"
+        android:icon="@android:drawable/stat_notify_chat"
+        android:title="@string/questionnaire" />
+    <item
+        android:id="@+id/settingFragment"
+        android:icon="@android:drawable/ic_menu_manage"
+        android:title="@string/setting" />
 </menu>
