--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -18,6 +18,7 @@
         <action
             android:id="@+id/action_questionaireFragment_to_completeQuestionFragment"
             app:destination="@id/completeQuestionFragment"
+            app:popUpTo="@id/homeFragment"
             app:popUpToInclusive="false" />
     </fragment>
     <fragment
