--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="text_box_style">
-        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textAlignment">center</item>
@@ -10,5 +10,4 @@
         <item name="android:textStyle">bold</item>
         <item name="android:layout_marginTop">16dp</item>
     </style>
-
 </resources>
