fixed home layout and cleaned home fragment

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -139,7 +139,6 @@
         android:id="@+id/pefr_info_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
         android:src="@android:drawable/ic_menu_info_details"
         app:layout_constraintBottom_toBottomOf="@+id/pefr_text"
         app:layout_constraintEnd_toStartOf="@+id/pefr_edit"
@@ -150,7 +149,6 @@
         android:id="@+id/zip_info_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
         android:src="@android:drawable/ic_menu_info_details"
         app:layout_constraintBottom_toBottomOf="@+id/zip_text"
         app:layout_constraintEnd_toStartOf="@+id/monitorId_edit"
@@ -160,7 +158,6 @@
         android:id="@+id/monitorId_info_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
         android:src="@android:drawable/ic_menu_info_details"
         app:layout_constraintBottom_toBottomOf="@+id/monitorId_text"
         app:layout_constraintEnd_toStartOf="@+id/monitorId_edit"
@@ -190,6 +187,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="number"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/zip_edit"
         app:layout_constraintStart_toStartOf="@+id/zip_edit"
         app:layout_constraintTop_toBottomOf="@+id/pefr_edit" />
@@ -201,6 +199,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="50dp"
+        android:textAlignment="center"
         android:ems="10"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/predict_button"
