--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -6,11 +6,6 @@
     app:startDestination="@id/homeFragment">
 
     <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.utd.indoorairmonitor.presentation.home.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
-    <fragment
         android:id="@+id/questionaireFragment"
         android:name="com.utd.indoorairmonitor.presentation.questionaire.QuestionaireFragment"
         android:label="QuestionaireFragment"
@@ -30,4 +25,9 @@
             android:id="@+id/action_completeQuestionFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/homeFragment"
+        tools:layout="@layout/fragment_home"
+        android:name="com.utd.indoorairmonitor.presentation.home.HomeFragment"
+        android:label="HomeFragment" />
 </navigation>
